fix: align videoTitle center

--- a/frontend/src/components/Video/Video.module.css
+++ b/frontend/src/components/Video/Video.module.css
@@ -70,6 +70,9 @@
 }
 
 .videoTitleWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   min-height: 3rem;
 }
